<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C6C6"
    tools:context=".LedControl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_margin="15dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/command_button"
                android:textSize="20sp"
                android:text="@string/combo_1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/command_button"
                android:textSize="20sp"
                android:text="@string/combo_2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/command_button"
                android:textSize="20sp"
                android:text="@string/combo_3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/command_button"
                android:textSize="20sp"
                android:text="@string/combo_4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/command_button"
                android:textSize="20sp"
                android:text="@string/combo_5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/disconnect_button"
                android:textSize="20sp"
                android:text="@string/stop"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/disconnect_button"
                android:textSize="20sp"
                android:text="@string/disconnect_pairing"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>